# cuckoo-lang

./: .gitattributes  Cargo.toml  LICENSE.txt  readme.md
kernel/: Cargo.toml
kernel/src/: diagnostic.rs  lib.rs
kernel/src/parser/: mod.rs
kernel/src/typeck/: context.rs  error.rs  level.rs  mod.rs  namespace.rs
kernel/tests/: readme.md
kernel/tests/data_types/: acc.ck  eq.ck  vec.ck
kernel/tests/invalid_data_declarations/: constructor_parameter_level_too_high_1.ck  constructor_parameter_level_too_high_1.out  constructor_parameter_level_too_high_2.ck  constructor_parameter_level_too_high_2.out  family_not_a_sort.ck  mismatched_parameter.ck  non_strictly_positive_2.ck  non_strictly_positive_2.out  references_self_in_family.ck  references_self_in_family.out
kernel/tests/name_resolution/: bound_variable_as_start_of_path_1.ck  bound_variable_as_start_of_path_1.out  bound_variable_as_start_of_path_2.ck  bound_variable_as_start_of_path_2.out  captures_1.ck  captures_1.out  captures_2.ck  shadowing_1.ck  shadowing_1.out  shadowing_2.ck  shadowing_2.out  unknown_name_1.ck  unknown_name_1.out  unknown_name_2.ck  unknown_name_2.out  unknown_name_3.ck  unknown_name_3.out  unknown_name_4.ck  unknown_name_4.out  unknown_name_5.ck  unknown_name_5.out
kernel/tests/typing/: pi_types_1.ck  pi_types_2.ck  pi_types_3.ck
kernel/tests/unsupported/: level_inference.ck  level_inference.out  multiple_binders_1.ck  multiple_binders_1.out  multiple_binders_2.ck  multiple_binders_2.out  multiple_binders_3.ck  multiple_binders_3.out  type_inference_1.ck  type_inference_1.out  (+2 more)
(+279 files in other folders)
