[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
common = {workspace = true}
parser = {workspace = true}

# For deriving traits while ignoring certain fields
derivative = "2.2"

[dev-dependencies]
parser = {workspace =  true, features = ["test-utils"]}
test_each_file = "0.3.6"

[features]
test-utils = ["parser/test-utils"]